fix intellij inspection results